--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-"PLUM PUDDING" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FG</title>
+</head>
+<body>
+    "Plum pudding"
+</body>
+</html>
