ajout des img en liens

--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FG</title>
-</head>
-<body>
-    "Plum pudding"
-    <a href="https://github.com/FredericGaudreau">Github</a>
-</body>
+  </head>
+  <body>
+    <a href="mailto:gaudreauf@gmail.com" style="text-decoration:none">
+      <img
+        alt="Github profile"
+        src="./images/email.jpg"
+        width="30"
+        height="30"
+      />
+    </a>
+    <a href="https://github.com/FredericGaudreau">
+      <img
+        alt="Github profile"
+        src="./images/github.png"
+        width="30"
+        height="30"
+      />
+    </a>
+  </body>
 </html>
