ajout de padding

--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
     <title>FG</title>
   </head>
   <body>
-    <a href="mailto:gaudreauf@gmail.com" style="text-decoration:none">
-      <img
-        alt="Github profile"
-        src="./images/email.jpg"
-        width="30"
-        height="30"
-      />
-    </a>
-    <a href="https://github.com/FredericGaudreau">
-      <img
-        alt="Github profile"
-        src="./images/github.png"
-        width="30"
-        height="30"
-      />
-    </a>
+    <div style="position: fixed; bottom: 0; right: 0; padding: 10px;">
+      <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
+        <img
+          alt="Github profile"
+          src="./images/email.jpg"
+          width="30"
+          height="30"
+        />
+      </a>
+      <a href="https://github.com/FredericGaudreau">
+        <img
+          alt="Github profile"
+          src="./images/github.png"
+          width="30"
+          height="30"
+        />
+      </a>
+    </div>
   </body>
 </html>
