--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FG</title>
+    <link rel="icon" type="image/svg+xml" href="./images/favicon.svg" />
+    <link rel="icon" type="image/png" href="./images/favicon.png" />
   </head>
   <body>
-    <div style="position: fixed; bottom: 0; right: 0; padding: 10px;">
+    <div style="position: fixed; bottom: 0; right: 0; padding: 10px">
       <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
         <img
           alt="Github profile"
