--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="icon" type="image/png" href="./images/favicon.png" />
   </head>
   <body>
+    <div style="position: absolute; right: 50%; bottom: 50%;">
+      <p>En délibération...</p>
+    </div>
     <div style="position: fixed; bottom: 0; right: 0; padding: 10px">
       <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
         <img
