--- a/html/index.html
+++ b/html/index.html
@@ -7,16 +7,17 @@
     <title>FG</title>
     <link rel="icon" type="image/svg+xml" href="./images/favicon.svg" />
     <link rel="icon" type="image/png" href="./images/favicon.png" />
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <div style="position: absolute; right: 50%; bottom: 50%;">
+    <div class="contenu" >
       <p>En délibération...</p>
     </div>
-    <div style="position: fixed; bottom: 0; right: 0; padding: 10px">
+    <div class="liens">
       <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
         <img
           alt="Github profile"
-          src="./images/email.jpg"
+          src="../images/email.jpg"
           width="30"
           height="30"
         />
@@ -24,7 +25,7 @@
       <a href="https://github.com/FredericGaudreau">
         <img
           alt="Github profile"
-          src="./images/github.png"
+          src="../images/github.png"
           width="30"
           height="30"
         />
