--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://FredericGaudreau.github.io/html/index.html">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FG</title>
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
+    <link rel="stylesheet" href="/css/style.css">
+  </head>
+  <body>
+    <div class="contenu" >
+      <p>En délibération...</p>
+    </div>
+    <div class="liens">
+      <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
+        <img
+          alt="Github profile"
+          src="../images/email.jpg"
+          width="30"
+          height="30"
+        />
+      </a>
+      <a href="https://github.com/FredericGaudreau">
+        <img
+          alt="Github profile"
+          src="../images/github.png"
+          width="30"
+          height="30"
+        />
+      </a>
+    </div>
+  </body>
 </html>
