--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FG</title>
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
     <link rel="icon" type="image/png" href="/images/favicon.png" />
     <link rel="stylesheet" href="/css/style.css">
+    <title>FG</title>
   </head>
   <body>
+    <div class="header"><a href="https://FredericGaudreau.github.io/apropos.html">À propos</a></div>
     <div class="contenu" >
+      
       <p>En délibération...</p>
     </div>
     <div class="liens">
