--- a/index.html
+++ b/index.html
@@ -6,12 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
     <link rel="icon" type="image/png" href="/images/favicon.png" />
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style.css" />
     <title>FG</title>
   </head>
   <body>
-    <div class="header"><a href="https://FredericGaudreau.github.io/apropos.html">À propos</a></div>
-    <div class="contenu" >
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.6/processing.min.js"
+      integrity="sha512-lbO95HE52QWwrDVEaDJmW9Xr8UIfMpRFT3akB8ett7lGfWsrGKz07L6wfwnF3KJ3T4a8cZupAKoI9Q2jH+0QIA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="sketch.js"></script>
+    <div class="header">
+      <a href="https://FredericGaudreau.github.io/apropos.html">À propos</a>
+    </div>
+    <div class="contenu">
       <p>En délibération...</p>
     </div>
     <div class="liens">
