ajout du random()

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- https://happycoding.io/tutorials/p5js/random -->
+<!-- https://happycoding.io/tutorials/p5js/web-dev -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,7 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
     <link rel="icon" type="image/png" href="/images/favicon.png" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js" integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="/css/style.css" />
+    <script src="sketch.js"></script>
     <title>FG</title>
   </head>
   <body>
@@ -14,7 +19,7 @@
       <a href="https://FredericGaudreau.github.io/apropos.html">À propos</a>
     </div>
     <div class="contenu">
-      <p>En délibération...</p>
+      <p>Démonstration de random() de <a href="https://p5js.org/"><strong>p5.js</strong></a></p>
     </div>
     <div class="liens">
       <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
@@ -36,3 +41,4 @@
     </div>
   </body>
 </html>
+
