--- a/apropos.html
+++ b/apropos.html
@@ -12,10 +12,9 @@
 <body>
     <div class="header"><a href="https://FredericGaudreau.github.io/apropos.html">À propos</a></div>
     <div class="apropos" >
-        <p>Ce site sert principalement comme plate-forme pour apprendre le développement d'applications Web et mobiles.</p>
-        <p>J'utilise du HTML, du CSS (et prochainement Javascript). Si l'hébergement par Github Pages, j'utiliserais également du React.</p>
+        <p>Ce site sert principalement comme plate-forme pour utiliser des langages de programmation web comme HTML, CSS et Javascript.</p>
         <p>Je m'intéresse aux relations entre la technologie, la politique et l'être humain et son environnement.</p>
-        <p>Je suis en recherche d'emploi à moyen terme. N'hésitez pas à me contacter pour qu'on discute des possibilités.</p>
+        <!-- <p>Je suis en recherche d'emploi à moyen terme. N'hésitez pas à me contacter pour qu'on discute des possibilités.</p> -->
       </div>
     <div class="liens">
         <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
