--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <a href="https://FredericGaudreau.github.io/apropos.html">À propos</a>
     </div>
     <div class="contenu">
-      <p>Démonstration de random() de <a href="https://p5js.org/"><strong>p5.js</strong></a></p>
+      <p>Démonstration de <a href="https://happycoding.io/tutorials/p5js/random">random()</a> de <a href="https://p5js.org/">p5.js</a></p>
+      <p>Modifiez les dimensions de la fenêtre fera recommencer la démonstration.</p>
     </div>
     <div class="liens">
       <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
