contenu au centre

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="contenu">
       <p>Démonstration de <a href="https://happycoding.io/tutorials/p5js/random">random()</a> de <a href="https://p5js.org/">p5.js</a></p>
       <p>Modifiez les dimensions de la fenêtre fera recommencer la démonstration.</p>
+      <p>Avec le temps, la page entière devrait se couvrir de couleur.</p>
     </div>
     <div class="liens">
       <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
