--- a/random.html
+++ b/random.html
@@ -9,19 +9,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
     <link rel="icon" type="image/png" href="/images/favicon.png" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js" integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"
+      integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <link rel="stylesheet" href="/css/style.css" />
     <script src="sketch.js"></script>
     <title>FG</title>
   </head>
   <body>
     <div class="header">
-      <a href="https://FredericGaudreau.github.io/apropos.html">À propos</a>
+      <a href="https://FredericGaudreau.github.io/">Accueil</a>
     </div>
     <div class="contenu">
-      <p>Modifiez les dimensions de la fenêtre fera recommencer la démonstration.</p>
+      <p>
+        Démonstration du random() de
+        <a href="https://p5js.org/">p5.js</a>, une libraire de programmation web en JavaScript.
+      </p>
+      <p>
+        Après avoir tombé par hasard sur
+        <a href="https://happycoding.io/tutorials/p5js/random">cette page</a>, j'ai commencé à m'intéresser à p5.js et ses possibilités. Observer
+        comment se présente le hasard et les patterns qui peuvent en sortir
+        m'ont toujours fasciné.
+      </p>
+      <p>
+        Modifiez les dimensions de la fenêtre fera recommencer la démonstration.
+      </p>
       <p>Avec le temps, la page entière devrait se couvrir de couleur.</p>
-      <a href="https://FredericGaudreau.github.io/random.html">Pour en savoir plus</a>
     </div>
     <div class="liens">
       <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
@@ -43,4 +59,3 @@
     </div>
   </body>
 </html>
-
