--- a/apropos.html
+++ b/apropos.html
@@ -7,6 +7,10 @@
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
     <link rel="icon" type="image/png" href="/images/favicon.png" />
     <link rel="stylesheet" href="/css/style.css">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    />
     <title>FG</title>
 </head>
 <body>
@@ -20,22 +24,12 @@
         <p>Je m'intéresse aux relations entre la technologie, la politique et l'être humain et son environnement.</p>
         <!-- <p>Je suis en recherche d'emploi à moyen terme. N'hésitez pas à me contacter pour qu'on discute des possibilités.</p> -->
       </div>
-    <div class="liens">
+      <div class="liens">
         <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
-          <img
-            alt="Github profile"
-            src="../images/email.jpg"
-            width="30"
-            height="30"
-          />
+          <i class="far fa-envelope"></i>
         </a>
         <a href="https://github.com/FredericGaudreau">
-          <img
-            alt="Github profile"
-            src="../images/github.png"
-            width="30"
-            height="30"
-          />
+          <i class="fab fa-github"></i>
         </a>
       </div>
 </body>
