--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
     <link rel="icon" type="image/png" href="/images/favicon.png" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js" integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"
+      integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <link rel="stylesheet" href="/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    />
     <script src="sketch.js"></script>
     <title>FG</title>
   </head>
@@ -19,28 +28,21 @@
       <a href="https://FredericGaudreau.github.io/apropos.html">À propos</a>
     </div>
     <div class="contenu">
-      <p>Modifiez les dimensions de la fenêtre fera recommencer la démonstration.</p>
+      <p>
+        Modifiez les dimensions de la fenêtre fera recommencer la démonstration.
+      </p>
       <p>Avec le temps, la page entière devrait se couvrir de couleur.</p>
-      <a href="https://FredericGaudreau.github.io/random.html">Pour en savoir plus</a>
+      <a href="https://FredericGaudreau.github.io/random.html">
+        Pour en savoir plus
+      </a>
     </div>
     <div class="liens">
       <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
-        <img
-          alt="Github profile"
-          src="../images/email.jpg"
-          width="30"
-          height="30"
-        />
+        <i class="far fa-envelope"></i>
       </a>
       <a href="https://github.com/FredericGaudreau">
-        <img
-          alt="Github profile"
-          src="../images/github.png"
-          width="30"
-          height="30"
-        />
+        <i class="fab fa-github"></i>
       </a>
     </div>
   </body>
 </html>
-
