--- a/random.html
+++ b/random.html
@@ -9,6 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
     <link rel="icon" type="image/png" href="/images/favicon.png" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    />
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"
       integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g=="
@@ -41,20 +45,10 @@
     </div>
     <div class="liens">
       <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
-        <img
-          alt="Github profile"
-          src="../images/email.jpg"
-          width="30"
-          height="30"
-        />
+        <i class="far fa-envelope"></i>
       </a>
       <a href="https://github.com/FredericGaudreau">
-        <img
-          alt="Github profile"
-          src="../images/github.png"
-          width="30"
-          height="30"
-        />
+        <i class="fab fa-github"></i>
       </a>
     </div>
   </body>
