--- a/apropos.html
+++ b/apropos.html
@@ -20,7 +20,7 @@
       <a href="https://FredericGaudreau.github.io/apropos.html">À propos</a> -->
     </div>
     <div class="contenu" >
-        <p>Ce site sert principalement comme plate-forme pour utiliser des langages de programmation web comme HTML, CSS et Javascript.</p>
+        <p>Ce site sert principalement comme plate-forme pour utiliser et apprendre le langage HTML, CSS et Javascript.</p>
         <p>Je m'intéresse aux relations entre la technologie, la politique et l'être humain et son environnement.</p>
         <!-- <p>Je suis en recherche d'emploi à moyen terme. N'hésitez pas à me contacter pour qu'on discute des possibilités.</p> -->
       </div>
