--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       <a href="https://FredericGaudreau.github.io/apropos.html">À propos</a>
     </div>
     <div class="contenu">
-      <p>Avec le temps, la page entière devrait se couvrir de couleur.</p>
+      <!-- <p>Avec le temps, la page entière devrait se couvrir de couleur.</p> -->
+      <p>Bienvenue</p>
       <a href="https://FredericGaudreau.github.io/random.html">
         Pour en savoir plus
       </a>
