--- a/random.html
+++ b/random.html
@@ -30,11 +30,13 @@
     <div class="contenu">
       <p>
         Démonstration du random() de
-        <a href="https://p5js.org/">p5.js</a>, une libraire de programmation web en JavaScript.
+        <a href="https://p5js.org/">p5.js</a>
+        , une libraire de programmation web en JavaScript.
       </p>
       <p>
         Après avoir tombé par hasard sur
-        <a href="https://happycoding.io/tutorials/p5js/random">cette page</a>, j'ai commencé à m'intéresser à p5.js et ses possibilités. Observer
+        <a href="https://happycoding.io/tutorials/p5js/random">cette page</a>
+        , j'ai commencé à m'intéresser à p5.js et ses possibilités. Observer
         comment se présente le hasard et les patterns qui peuvent en sortir
         m'ont toujours fasciné.
       </p>
