up and at them..!

--- a/random.html
+++ b/random.html
@@ -20,7 +20,7 @@
       referrerpolicy="no-referrer"
     ></script>
     <link rel="stylesheet" href="/css/style.css" />
-    <script src="sketch.js"></script>
+    <!-- <script src="sketch.js"></script> -->
     <title>FG</title>
   </head>
   <body>
@@ -41,9 +41,19 @@
         m'ont toujours fasciné.
       </p>
       <p>
-        Modifiez les dimensions de la fenêtre fera recommencer la démonstration.
+        En jouant un peu avec le code, je suis arrivé au résultat que vous avez
+        vu sur la page d'accueil.
       </p>
-      <p>Avec le temps, la page entière devrait se couvrir de couleur.</p>
+      <p>
+        Vous pouvez le voir sans texte superposé en cliquant
+        <a href="http://FredericGaudreau.github.io/demo.html">ici</a>.
+      </p>
+      <p>Un autre <a href="http://FredericGaudreau.github.io/demoWavemaker.html">exemple</a> permet également d'interagir avec l'effet en déplacant le curseur.</p>
+      <p>
+        Modifiez les dimensions de la fenêtre fera recommencer les
+        démonstrations.
+      </p>
+      <p>Veuillez prendre note que p5.js peut être gourmand en ressources.</p>
     </div>
     <div class="liens">
       <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
