des oublis, ça arrive..

--- a/demo.html
+++ b/demo.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div class="header">
-        <a href="https://FredericGaudreau.github.io/">Accueil</a>
+        <a href="https://FredericGaudreau.github.io/">Revenir en arrière</a>
       </div>
       <div class="liens">
         <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
