--- a/html/apropos.html
+++ b/html/apropos.html
@@ -1,6 +1,3 @@
-<!-- https://happycoding.io/tutorials/p5js/random -->
-<!-- https://happycoding.io/tutorials/p5js/web-dev -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,30 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
     <link rel="icon" type="image/png" href="/images/favicon.png" />
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"
-      integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
     <link rel="stylesheet" href="/css/style.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     />
-    <script src="sketch.js"></script>
     <title>FG</title>
   </head>
   <body>
     <div class="header">
-      <a href="https://FredericGaudreau.github.io/apropos.html">À propos</a>
+      <a href="https://fredericgaudreau.github.io/">Accueil</a>
+      <!-- <br>
+      <a href="https://FredericGaudreau.github.io/apropos.html">À propos</a> -->
     </div>
     <div class="contenu">
-      <!-- <p>Avec le temps, la page entière devrait se couvrir de couleur.</p> -->
-      <p>Bienvenue</p>
-      <a href="https://FredericGaudreau.github.io/random.html">
-        Pour en savoir plus
-      </a>
+      <p>
+        Ce site sert principalement comme plate-forme pour utiliser et
+        approfondir les langages HTML, CSS et Javascript, entre autres.
+      </p>
+      <p>
+        Je m'intéresse aux relations entre la technologie, la politique et
+        l'être humain et son environnement.
+      </p> 
+      <p>
+        Je suis un développeur Front End depuis quelques mois. Côté technologie,
+        je suis particulièrement intéressé par les projets Open Source.
+      </p>
     </div>
     <div class="liens">
       <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
