--- a/apropos.html
+++ b/apropos.html
@@ -29,7 +29,7 @@
         l'être humain et son environnement.
       </p> 
       <p>
-        Je suis un développeur Front End depuis quelques mois. Côté technologie,
+        Je suis un développeur Front End depuis quelques temps. Côté technologie,
         je suis particulièrement intéressé par les projets Open Source.
       </p>
     </div>
