--- a/demo.html
+++ b/demo.html
@@ -17,7 +17,7 @@
       referrerpolicy="no-referrer"
     ></script>
     <link rel="stylesheet" href="/css/style.css" />
-    <script src="sketch.js"></script>
+    <script src="./js/sketch.js"></script>
 
     <title>FG - Demo</title>
   </head>
