--- a/demoWavemaker.html
+++ b/demoWavemaker.html
@@ -17,7 +17,7 @@
       referrerpolicy="no-referrer"
     ></script>
     <link rel="stylesheet" href="/css/style.css" />
-    <script src="./demoWavemaker.js"></script>
+    <script src="./js/demoWavemaker.js"></script>
 
     <title>FG - Demo wavemaker</title>
   </head>
