--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     />
-    <script src="sketch.js"></script>
+    <script src="./js/sketch.js"></script>
     <title>FG</title>
   </head>
   <body>
