--- a/random.html
+++ b/random.html
@@ -20,7 +20,7 @@
       referrerpolicy="no-referrer"
     ></script>
     <link rel="stylesheet" href="/css/style.css" />
-    <!-- <script src="sketch.js"></script> -->
+    <!-- <script src="./js/sketch.js"></script> -->
     <title>FG</title>
   </head>
   <body>
