ouvrir les fenêtres...

--- a/apropos.html
+++ b/apropos.html
@@ -16,8 +16,6 @@
   <body>
     <div class="header">
       <a href="https://fredericgaudreau.github.io/">Accueil</a>
-      <!-- <br>
-      <a href="https://FredericGaudreau.github.io/apropos.html">À propos</a> -->
     </div>
     <div class="contenu">
       <p>
@@ -27,18 +25,22 @@
       <p>
         Je m'intéresse aux relations entre la technologie, la politique et
         l'être humain et son environnement.
-      </p> 
+      </p>
+      <p>Ces derniers temps, je m'intéresse à l'interaction avec le multimédia. Quelques exemples se trouvent <a href="https://fredericgaudreau.github.io/random.html">ici<a >.</p>
       <p>
-        Je suis un développeur Front End depuis quelques temps. Côté technologie,
-        je suis particulièrement intéressé par les projets Open Source.
+        Je suis un développeur Front End. Côté technologie, je suis intéressé
+        par les projets Open Source et les technologies web.
       </p>
     </div>
     <div class="liens">
-      <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
-        <i class="far fa-envelope"></i>
-      </a>
       <a href="https://github.com/FredericGaudreau">
         <i class="fab fa-github"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/FredericGaudreau/">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
+        <i class="far fa-envelope"></i>
       </a>
     </div>
   </body>
