--- a/demoWavemaker.html
+++ b/demoWavemaker.html
@@ -26,11 +26,14 @@
       <a href="https://FredericGaudreau.github.io/random.html">Revenir en arrière</a>
     </div>
     <div class="liens">
-      <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
-        <i class="far fa-envelope"></i>
-      </a>
       <a href="https://github.com/FredericGaudreau">
         <i class="fab fa-github"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/FredericGaudreau/">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
+        <i class="far fa-envelope"></i>
       </a>
     </div>
   </body>
