--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     />
-    <script src="./js/sketch.js"></script>
     <title>FG</title>
   </head>
   <body>
@@ -29,17 +28,17 @@
     </div>
     <div class="contenu">
       <!-- <p>Avec le temps, la page entière devrait se couvrir de couleur.</p> -->
-      <p>Bienvenue</p>
-      <a href="https://FredericGaudreau.github.io/random.html">
-        Pour en savoir plus
-      </a>
+      <p>Bonjour</p>
     </div>
     <div class="liens">
-      <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
-        <i class="far fa-envelope"></i>
-      </a>
       <a href="https://github.com/FredericGaudreau">
         <i class="fab fa-github"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/FredericGaudreau/">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
+        <i class="far fa-envelope"></i>
       </a>
     </div>
   </body>
