--- a/random.html
+++ b/random.html
@@ -29,13 +29,6 @@
     </div>
     <div class="contenu">
       <p>
-        Ce que vous venez de voir est une démonstration du random() de
-        <a href="https://p5js.org/">p5.js</a>
-        , une libraire de programmation web en JavaScript. Cette libraire permet
-        de créer des oeuvres numériques qui peuvent être interactives selon
-        l'objectif voulu.
-      </p>
-      <p>
         Après avoir tombé par hasard sur
         <a href="https://happycoding.io/tutorials/p5js/random">cette page</a>
         , j'ai commencé à m'intéresser à p5.js et ses possibilités. Observer
@@ -43,14 +36,17 @@
         m'ont toujours fasciné.
       </p>
       <p>
-        En jouant un peu avec le code, je suis arrivé au résultat que vous avez
-        vu sur la page d'accueil.
+         J'ai commencé à explorer 
+        <a href="https://p5js.org/">p5.js</a>
+        , une libraire de programmation web en JavaScript. Cette libraire permet
+        de créer des oeuvres numériques qui peuvent être interactives selon
+        l'objectif voulu.
       </p>
       <p>
-        Vous pouvez le voir sans texte superposé en cliquant
+        En jouant un peu avec le code, je suis arrivé au résultat que vous pouvez voir en cliquant
         <a href="http://FredericGaudreau.github.io/demo.html">ici</a>.
       </p>
-      <br />
+      
       <p>
         Un autre
         <a href="http://FredericGaudreau.github.io/demoWavemaker.html"
@@ -62,15 +58,17 @@
         Modifiez les dimensions de la fenêtre fera recommencer les
         démonstrations.
       </p>
-      <br>
-      <p>Veuillez prendre note que p5.js peut être gourmand en ressources.</p>
+      <p>Prenez note que p5.js peut être gourmand en ressources.</p>
     </div>
     <div class="liens">
-      <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
-        <i class="far fa-envelope"></i>
-      </a>
       <a href="https://github.com/FredericGaudreau">
         <i class="fab fa-github"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/FredericGaudreau/">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
+        <i class="far fa-envelope"></i>
       </a>
     </div>
   </body>
