--- a/demo.html
+++ b/demo.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div class="header">
-        <a href="https://FredericGaudreau.github.io/">Revenir en arrière</a>
+        <a href="https://FredericGaudreau.github.io/random.html"><i class="fas fa-arrow-left"></i></a>
       </div>
       <div class="liens">
         <a href="https://github.com/FredericGaudreau">
@@ -32,7 +32,7 @@
         <a href="https://www.linkedin.com/in/FredericGaudreau/">
           <i class="fab fa-linkedin"></i>
         </a>
-        <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
+        <a href="mailto:frederic.gaudreau@icloud.com" style="text-decoration: none">
           <i class="far fa-envelope"></i>
         </a>
       </div>
