--- a/index.html
+++ b/index.html
@@ -24,12 +24,9 @@
   </head>
   <body>
     <div class="header">
-      <a href="https://FredericGaudreau.github.io/apropos.html">À propos</a>
+      <a href="https://FredericGaudreau.github.io/apropos.html"><i class="fas fa-question-circle"></i></a>
     </div>
-    <div class="contenu">
-      <!-- <p>Avec le temps, la page entière devrait se couvrir de couleur.</p> -->
-      <p>Bonjour</p>
-    </div>
+    <div class="contenu">Bonjour</div>
     <div class="liens">
       <a href="https://github.com/FredericGaudreau">
         <i class="fab fa-github"></i>
@@ -37,7 +34,10 @@
       <a href="https://www.linkedin.com/in/FredericGaudreau/">
         <i class="fab fa-linkedin"></i>
       </a>
-      <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
+      <a
+        href="mailto:frederic.gaudreau@icloud.com"
+        style="text-decoration: none"
+      >
         <i class="far fa-envelope"></i>
       </a>
     </div>
