--- a/random.html
+++ b/random.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <div class="header">
-      <a href="https://FredericGaudreau.github.io/">Accueil</a>
+      <a href="https://FredericGaudreau.github.io/"><i class="fas fa-home"></i></a>
     </div>
     <div class="contenu">
       <p>
@@ -67,7 +67,7 @@
       <a href="https://www.linkedin.com/in/FredericGaudreau/">
         <i class="fab fa-linkedin"></i>
       </a>
-      <a href="mailto:gaudreauf@gmail.com" style="text-decoration: none">
+      <a href="mailto:frederic.gaudreau@icloud.com" style="text-decoration: none">
         <i class="far fa-envelope"></i>
       </a>
     </div>
