--- a/apropos.html
+++ b/apropos.html
@@ -4,20 +4,43 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Frederic Gaudreau's personal website." />
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
     <link rel="icon" type="image/png" href="/images/favicon.png" />
     <link rel="stylesheet" href="/css/style.css" />
+    <!-- Add this line -->
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"
+      integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <title>FG</title>
   </head>
   <body>
-    <div class="header">
-      <a href="https://fredericgaudreau.github.io/"><i class="fas fa-home"></i></a>
-    </div>
-    <div class="contenu">
+    <header>
+      <a href="https://fredericgaudreau.github.io/"
+        ><i class="fas fa-home"></i
+      ></a>
+      <a href="https://github.com/FredericGaudreau" aria-label="GitHub">
+        <i class="fab fa-github"></i>
+      </a>
+      <a
+        href="https://www.linkedin.com/in/FredericGaudreau/"
+        aria-label="LinkedIn"
+      >
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="mailto:frederic.gaudreau@icloud.com" aria-label="Email">
+        <i class="fas fa-envelope"></i>
+      </a>
+    </header>
+
+    <main>
       <p>
         Ce site sert principalement comme plate-forme pour utiliser et
         approfondir les langages HTML, CSS et Javascript, entre autres.
@@ -26,22 +49,12 @@
         Je m'intéresse aux relations entre la technologie, la politique et
         l'être humain et son environnement.
       </p>
-      <p>Ces derniers temps, je m'intéresse à l'interaction avec le multimédia. Quelques exemples se trouvent <a href="https://fredericgaudreau.github.io/random.html">ici<a >.</p>
       <p>
         Je suis un développeur Front End. Côté technologie, je suis intéressé
-        par les projets Open Source et les technologies web.
+        par les projets Open Source (comme GNU/Linux) et le web. J'apprécie la
+        simplicité et le minimalisme.
       </p>
-    </div>
-    <div class="liens">
-      <a href="https://github.com/FredericGaudreau">
-        <i class="fab fa-github"></i>
-      </a>
-      <a href="https://www.linkedin.com/in/FredericGaudreau/">
-        <i class="fab fa-linkedin"></i>
-      </a>
-      <a href="mailto:frederic.gaudreau@icloud.com" style="text-decoration: none">
-        <i class="far fa-envelope"></i>
-      </a>
-    </div>
+    </main>
+    <footer></footer>
   </body>
 </html>
