--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- https://happycoding.io/tutorials/p5js/random -->
-<!-- https://happycoding.io/tutorials/p5js/web-dev -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -7,39 +5,43 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Frederic Gaudreau's personal website." />
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
     <link rel="icon" type="image/png" href="/images/favicon.png" />
+    <link rel="stylesheet" href="/css/style.css" /> <!-- Add this line -->
+    <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+  />
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"
       integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <link rel="stylesheet" href="/css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-    />
     <title>FG</title>
   </head>
   <body>
-    <div class="header">
-      <a href="https://FredericGaudreau.github.io/apropos.html"><i class="fas fa-question-circle"></i></a>
-    </div>
-    <div class="contenu">Bonjour</div>
-    <div class="liens">
-      <a href="https://github.com/FredericGaudreau">
+    <header>
+      <a href="https://FredericGaudreau.github.io/apropos.html" aria-label="About">
+        <i class="fas fa-user"></i>
+      </a>
+      <a href="https://github.com/FredericGaudreau" aria-label="GitHub">
         <i class="fab fa-github"></i>
       </a>
-      <a href="https://www.linkedin.com/in/FredericGaudreau/">
+      <a href="https://www.linkedin.com/in/FredericGaudreau/" aria-label="LinkedIn">
         <i class="fab fa-linkedin"></i>
       </a>
-      <a
-        href="mailto:frederic.gaudreau@icloud.com"
-        style="text-decoration: none"
-      >
-        <i class="far fa-envelope"></i>
+      <a href="mailto:frederic.gaudreau@icloud.com" aria-label="Email">
+        <i class="fas fa-envelope"></i>
       </a>
-    </div>
+    </header>
+    <main>
+      <p>
+        “Highly organized research is guaranteed to produce nothing new.”
+        ― Frank Herbert, Dune       </p>
+    </main>
+    <footer>
+    </footer>
   </body>
 </html>
