--- a/apropos.html
+++ b/apropos.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Frederic Gaudreau's personal website." />
-    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
-    <link rel="icon" type="image/png" href="/images/favicon.png" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <!-- Add this line -->
+    <link rel="icon" type="image/svg+xml" href="src/images/favicon.svg" />
+    <link rel="icon" type="image/png" href="src/images/favicon.png" />
+    <link rel="stylesheet" href="src/css/style.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -22,24 +21,7 @@
     <title>FG</title>
   </head>
   <body>
-    <header>
-      <a href="https://fredericgaudreau.github.io/"
-        ><i class="fas fa-home"></i
-      ></a>
-      <a href="https://github.com/FredericGaudreau" aria-label="GitHub">
-        <i class="fab fa-github"></i>
-      </a>
-      <a
-        href="https://www.linkedin.com/in/FredericGaudreau/"
-        aria-label="LinkedIn"
-      >
-        <i class="fab fa-linkedin"></i>
-      </a>
-      <a href="mailto:frederic.gaudreau@icloud.com" aria-label="Email">
-        <i class="fas fa-envelope"></i>
-      </a>
-    </header>
-
+    <div id="header"></div>
     <main>
       <p>
         Ce site sert principalement comme plate-forme pour utiliser et
@@ -55,6 +37,7 @@
         simplicité et le minimalisme. 
       </p>
     </main>
-    <footer></footer>
+    <div id="footer"></div>
   </body>
 </html>
+<script src="src/js/index.js"></script>
