première version de la carte

--- a/apropos.html
+++ b/apropos.html
@@ -12,12 +12,6 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     />
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"
-      integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
     <title>FG</title>
   </head>
   <body>
@@ -32,9 +26,11 @@
         l'être humain et son environnement.
       </p>
       <p>
-        Je suis un développeur Front End. Côté technologie, je suis intéressé
-        par les projets Open Source (comme GNU/Linux) et le web. J'apprécie la
-        simplicité et le minimalisme. 
+        Je suis présentement chargé de projet en mobilité durable, mais je
+        m’intéresse toujours au développement web et à la présentation efficace
+        de l’information. Côté technologie, je privilégie les projets open
+        source (comme GNU/Linux) et les solutions web épurées, où simplicité et
+        minimalisme guident mes choix.
       </p>
     </main>
     <div id="footer"></div>
