--- a/index.html
+++ b/index.html
@@ -12,12 +12,6 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     />
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"
-      integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
     <title>FG</title>
   </head>
   <body>
@@ -27,6 +21,8 @@
         “Highly organized research is guaranteed to produce nothing new.” ―
         Frank Herbert, Dune
       </p>
+      
+      <p><a href="/map.html">Voir la carte interactive</a></p>
     </main>
     <div id="footer"></div>
   </body>
